# acv

./: README.md
backend/: .gitignore  CMakeLists.txt
backend/main/: CMakeLists.txt  Kconfig.projbuild  esp_rest_main.c  rest_server.c
eda/: acv.kicad_pro  acv.kicad_sch  acv.kicad_sym  fp-lib-table  sym-lib-table
eda/acv.pretty/: OBD2_J1962_MALE_90.kicad_mod  SN65HVD230.kicad_mod
frontend/: index.html  manifest.json  package-lock.json  package.json
frontend/css/: main.css
frontend/js/: main.js
